--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,8 @@
 name: "bitsgalore.github.io"
 description: "bitsgalore's blog"
-
 encoding: UTF-8
-
-url: "[http://localhost:4000]"
-
-
+url: http://localhost:4000
 paginate: 10
-
 markdown: kramdown
 permalink: pretty 
-pygments: true 
+pygments: true
