--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : bitsgalore.org
+tagline: Assorted random stuff
 author :
   name : Johan van der Knijff
-  email : blah@email.test
+  email : bitsgalore@bitsgalore.org
   github : bitsgalore
   twitter : bitsgalore
 
