--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink: /:categories/:year/:month/:day/:title
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 markdown: kramdown
 highlighter: rouge
-gems: [jekyll-paginate]
+gems: ['jekyll-paginate','jekyll-lunr-js-search']
 paginate: 5
 
 # Themes are encouraged to use these universal variables 
