--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ permalink: /:categories/:year/:month/:day/:title
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 markdown: kramdown
 highlighter: rouge
+kramdown:
+  syntax_highlighter: rouge
 plugins: [jekyll-paginate]
 paginate: 5
 
